[gd_scene load_steps=4 format=3 uid="uid://ce1ekytxsmo8w"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_wfghc"]
[ext_resource type="Theme" uid="uid://clppkqi01qnwg" path="res://menus/new_theme.tres" id="2_8k2o1"]
[ext_resource type="PackedScene" uid="uid://d0wq5sfxok8kj" path="res://menus/options_menu.tscn" id="2_v1uqb"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wfghc")

[node name="PauseMenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -154.5
offset_right = 125.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ContinueButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("2_8k2o1")
text = "Continue"

[node name="OptionsButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
focus_next = NodePath("../MainMenuButton")
focus_previous = NodePath("../ContinueButton")
theme = ExtResource("2_8k2o1")
text = "Options"

[node name="MainMenuButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../OptionsButton")
theme = ExtResource("2_8k2o1")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../MainMenuButton")
theme = ExtResource("2_8k2o1")
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_v1uqb")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="back_button_pressed" from="OptionsMenu" to="." method="_on_options_menu_back_button_pressed"]
